k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
